find_package(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
if("${CMAKE_SYSTEM_NAME}" STREQUAL "WindowsStore")
	message(FATAL_ERROR "This framework not supported for UWP")
elseif(MSVC)
	find_library(WSOCK32_LIBRARY wsock32)
	find_library(WS2_32_LIBRARY ws2_32)
	add_executable(lclient client_win.cpp winClient.cpp winClient.hpp player.h player.cpp table.h table.cpp ball.h ball.cpp pngRenderer.h pngRenderer.cpp)
	target_link_libraries(lclient fssimplewindow ysclass ysbitmap ysbitmapfont msg ${Protobuf_LIBRARIES})
	target_include_directories(lclient PUBLIC ${PROTOBUF_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} wsock32 ws2_32)
else()
	add_executable(lclient MACOSX_BUNDLE client.cpp linuxClient.cpp linuxClient.hpp player.h player.cpp table.h table.cpp ball.h ball.cpp pngRenderer.h pngRenderer.cpp)
	target_link_libraries(lclient fssimplewindow ysclass ysbitmap ysbitmapfont msg ${PROTOBUF_LIBRARIES})
	target_include_directories(lclient PUBLIC ${PROTOBUF_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
endif()
