INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER msg.proto)

message(STATUS "protobuf src: " ${PROTO_SRC}) 
message(STATUS "protobuf header: " ${PROTO_HEADER}) 

ADD_LIBRARY(msg ${PROTO_HEADER} ${PROTO_SRC})
